--- a/ejemplos geolocalizacion/ejemplo01G/index.html
+++ b/ejemplos geolocalizacion/ejemplo01G/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Geolocation</title>
-    <script src="js/geolocation.js"></script>
-    <script src="js/googlemaps.js"></script>
+    <script src="js/geolocation.js"></script> 
+    <script src="js/googlemaps.js"></script>   
 </head>
 <body>
     <section id="ubicacion">
         <button type="button" id="obtener">Obtener mi ubicacion</button>
     </section>
+    <div style="width:750px; ">
+        <p>Tu posición en el mapa de google es:</p>
+        <p><span id="Pos">Desconocida</span></p>
+        <p id="PosLink"><a target="_blank"></a></p>
+    </div>
 </body>
 </html>
